<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E3A0C"
    tools:context=".MainActivity">

    <!--Not sure what to do about nested weights-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E3A0C"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="#615448"
            android:contentDescription="@string/seek_bar_content_description" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#1E3A0C"
            android:clickable="true"
            android:contentDescription="@string/image_content_description"
            android:onClick="changePic"
            app:srcCompat="@drawable/gorilla"
            android:focusable="true"
            tools:ignore="UsingOnClickInXml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#46682F"
                android:contentDescription="@string/button_content_description"
                android:onClick="onClick"
                android:text="@string/start_button"
                app:backgroundTint="#46682F"
                tools:ignore="NestedWeights,UsingOnClickInXml" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#132B04"
                android:contentDescription="@string/text_view_content_description"
                android:ems="10"
                android:inputType="none"
                android:text="@string/time_left"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>